[tool.poetry]
authors = ["Hironori Yamamoto <mr.nikoru918@gmail.com>"]
description = ""
name = "dagster-playground"
packages = [{include = "workflows"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "~3.10"

dagit = "^1.3.4"
dagster = "^1.3.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
invoke = "^2.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"

[tool.mypy]
exclude = [
  "tasks.py",
  ".venv",
]
plugins = []

check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
no_implicit_optional = true
no_implicit_reexport = true
python_version = "3.10"
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
known_first_party = ["workflows"]
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.coverage.run]
source = ["workflows"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.dagster]
module_name = "workflows"
